@@ -212,6 +212,8 @@ documents those changes that are of interest to users and administrators.
  -- helpers.conf - Allow many features to one helper script.
  -- Allow nodefeatures plugin features to work with cloud nodes.
  -- squeue - removed --array-unique option.
+ -- openapi/v0.0.39 - expand job stderr, stdin, and stdout path replacement
+    symbols when dumping job information via dump_job_info().
 
 * Changes in Slurm 22.05.8
 ==========================
